enable annotation processor